Add picture link dispo and mail generation for picture choose